Avoid displaying invisible text during webfont load
https://web.dev/font-display/?utm_source=lighthouse&utm_medium=devtools

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -20,11 +20,13 @@ $vib-shadow: rgba(0, 0, 0, 0.01);
 @font-face {
   font-family: Dense;
   src: url("../fonts/Dense-Regular.otf") format("opentype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: Dense-Bold;
   src: url("../fonts/Dense-Bold.otf") format("opentype");
+  font-display: swap;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500;600&display=swap");
